samples/_failures_safe/1761348736_f67feb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3141089.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_b3141089.c:185:5: error: expected identifier at end of input
  185 |     for (int i = 0; i < graph->
      |     ^~~
./samples/SAFE/__tmp_b3141089.c:185:5: error: expected declaration or statement at end of input
